part4/e2_e4_e5_e6/manifests/deployment_1.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  namespace: project-ns
  name: p4e02-backend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: p4e02-backend
  strategy:
    canary:
      steps:
      - setWeight: 50
      - analysis:
          templates:
          - templateName: cpu-load
  template:
    metadata:
      labels:
        app: p4e02-backend
    spec:
      volumes:
        - name: shared
          persistentVolumeClaim:
              claimName: app-claim
      containers:
        - name: p4e02-back-cont
          image: mcfizh/dwk-part1:p4e02-backend
          imagePullPolicy: Always
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 3000
          volumeMounts:
            - name: shared
              mountPath: /shared
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  namespace: project-ns
  name: p4e02-frontend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: p4e02-frontend
  strategy:
    canary:
      steps:
      - setWeight: 50
      - analysis:
          templates:
          - templateName: cpu-load
  template:
    metadata:
      labels:
        app: p4e02-frontend
    spec:
      containers:
        - name: p4e02-front-cont
          image: mcfizh/dwk-part1:p4e02-frontend
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  namespace: project-ns
  name: p4e06-broadcaster-dep
spec:
  replicas: 6
  selector:
    matchLabels:
      app: p4e06-broadcaster
  strategy:
    canary:
      steps:
      - setWeight: 50
      - analysis:
          templates:
          - templateName: cpu-load
  template:
    metadata:
      labels:
        app: p4e06-broadcaster
    spec:
      containers:
        - name: p4e06-bcast-cont
          image: mcfizh/dwk-part1:p4e06-bcast
          imagePullPolicy: Always
