part4/e2_e4_e5_e6/manifests/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgsql-svc
  namespace: project-ns
spec:
  ports:
  - port: 5432
  clusterIP: None
  selector:
    app: pgapp
---
apiVersion: v1
kind: Service
metadata:
  namespace: project-ns
  name: p4e02-backend-svc
spec:
  type: ClusterIP
  selector:
    app: p4e02-backend
  ports:
  - port: 2345
    protocol: TCP
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  namespace: project-ns
  name: p4e02-frontend-svc
spec:
  type: ClusterIP
  selector:
    app: p4e02-frontend
  ports:
  - port: 2346
    protocol: TCP
    targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: project-ns
  name: p4e02-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api
        backend:
          serviceName: p4e02-backend-svc
          servicePort: 2345
      - path: /
        backend:
          serviceName: p4e02-frontend-svc
          servicePort: 2346
